US98 Service permission manager